[package]
name = "day-12"
version = "0.1.0"
authors = ["Arief Bastian HB <ariefbastian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.3" }
lazy_static = { version = "1.4" }
anyhow = { version = "1" }
